[package]
name = "rbpf_cli"
version = "0.8.2"
description = "CLI to test and analyze eBPF programs"
authors = ["Lumos Maintainers <maintainers@lumos.foundation>"]
repository = "https://github.com/lumos-labs/rbpf"
homepage = "https://lumos.com/"
keywords = ["BPF", "eBPF", "interpreter", "JIT"]
edition = "2018"

[dependencies]
lumos-rbpf = { path = "../", features = ["debugger"] }
test_utils = { path = "../test_utils/" }
clap = "3.0.0-beta.2"
